Replace the legacy Sun Base64 encoder/decoder by MiGBase64.