@@ -6,7 +6,7 @@ import javax.crypto.spec.*;
 import org.scribe.exceptions.*;
 import org.scribe.utils.*;
 
-import sun.misc.BASE64Encoder;
+import com.miginfocom.base64.Base64;
 
 /**
  * HMAC-SHA1 implementation of {@SignatureService}
@@ -16,8 +16,6 @@ import sun.misc.BASE64Encoder;
  */
 public class HMACSha1SignatureService implements SignatureService
 {
-  private static final String EMPTY_STRING = "";
-  private static final String CARRIAGE_RETURN = "\r\n";
   private static final String UTF8 = "UTF-8";
   private static final String HMAC_SHA1 = "HmacSHA1";
   private static final String METHOD = "HMAC-SHA1";
@@ -45,7 +43,7 @@ public class HMACSha1SignatureService implements SignatureService
     Mac mac = Mac.getInstance(HMAC_SHA1);
     mac.init(key);
     byte[] bytes = mac.doFinal(toSign.getBytes(UTF8));
-    return new BASE64Encoder().encode(bytes).replace(CARRIAGE_RETURN, EMPTY_STRING);
+    return Base64.encodeToString(bytes, false);
   }
 
   /**
